<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Mapnik (beta)</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_refresh">Refresh</string>
    <string name="slogan">Get to know your neighborhood!</string>
    <string name="start">start</string>
    <string name="connection_problem">Problem with connection to internet</string>
    <string name="action_guess">Guess</string>
    <string name="guess_location">Guess location</string>
    <string name="no_guess_selected">You have to guess the location (no option is selected)</string>
    <string name="guess_distance">Distance between guess and actual location is:</string>
    <string name="guess_result">Result of your guess</string>
    <string name="right_answer">Right answer!</string>
    <string name="almost_right">Almost right ;) \n\nRight answer is:</string>
    <string name="wrong_answer">Wrong answer :( \n\nRight answer is:</string>
    <string name="start_game">Start game!</string>
    <string name="choose_location">Choose city</string>
    <string name="use_my_location">Use my location</string>
    <string name="select_city">Select city</string>
    <string name="search_city">Search city...</string>
    <string name="custom_location">Choose on map</string>
    <string name="show_on_map">Show on map</string>
    <string name="exit_game">Exit game?</string>
    <string name="user_location_not_available">Your location is not available</string>
    <string name="rounds">round:</string>
    <string name="score">score:</string>
    <string name="time_bonus_is_out">Your time bonus is out!</string>
    <string name="time_bonus">Time bonus</string>
    <string name="choose_diameter">Choose diameter</string>
    <string name="starting_location">Starting location</string>
    <string name="guess">Guess</string>
    <string name="right_location">Right location</string>

    <string name="signing_in" translatable="false">Signing in with Google</string>
    <string name="signing_out" translatable="false">Signing out</string>
    <string name="sign_in_explanation" translatable="false">Sign with Google to upload your achievements and share with friends.</string>
    <string name="you_are_signed_in" translatable="false">You are signed in with Google.</string>
    <string name="sign_out" translatable="false">Sign Out</string>
    <string name="click_me" translatable="false">Click me!</string>
    <string name="victory" translatable="false">Victory</string>
    <string name="you_won" translatable="false">OK! You won!</string>
    <string name="signin_other_error" translatable="false">There was an issue with sign in. Please try again later.</string>
    <string name="signin_failure" translatable="false">Signing in failed</string>
    <string name="action_achievements">Achievements</string>
    <string name="action_leaderboard">Leaderboard</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="verified_location">Verified courses!</string>
    <string name="unable_to_download_answers">Someone is blocking the connection...</string>
    <string name="downloading_answers">Downloading answers</string>
    <string name="show_leaderboard">show leaderboard</string>
    <string name="geocoder_error">Geocoder error</string>
    <string name="geocoder_is_not_present">Geocoder is not running in your device. Try restarting your device.</string>
    <string name="action_leaderboards">Leaderboards</string>
    <string name="action_share_score">share score</string>
    <string name="share_score">My new score in Mapnik</string>
    <string name="leaderboard_3k_player_location_name">My location [3km]</string>
    <string name="leaderboard_5k_player_location_name">My location [10km]</string>
    <string name="leaderboard_10k_player_location_name">My location [10km]</string>
    <string name="unnamed_rd">Unnamed Road</string>
    <string name="specify_bug">specify bug...</string>
    <string name="bug_report">bug report</string>
    <string name="email">your email</string>
    <string name="put_email">Please insert email address</string>
    <string name="put_bug_specification">Please specify bug</string>
    <string name="logcat_is_empty">LogCat is empty</string>
    <string name="share_score_download">Download the amazing game here</string>
    <string name="connected_to_play_games">Connected to Play Games</string>

</resources>
