<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bug_report"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:layout_margin="4dp"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bugSpecification"
        android:background="@color/bright_green"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:hint="@string/specify_bug"
        android:layout_margin="4dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:background="@color/bright_green"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:hint="@string/email"
        android:layout_margin="4dp"
        android:ems="10"
        android:id="@+id/email"
        android:layout_below="@+id/bugSpecification"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/email"
        android:background="@color/dark_green"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:layout_above="@+id/submitButton">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="8dp"
            android:textColor="@android:color/white"
            android:text=""
            android:id="@+id/logcat" />
    </ScrollView>

    <info.hoang8f.widget.FButton
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/submitButton"
        fontPath="@string/custom_font_bold"
        fbutton:buttonColor="@color/bright_green"
        fbutton:shadowColor="@color/dark_green"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="3dp"
        fbutton:cornerRadius="5dp"
        android:textColor="@color/dark_green"
        android:textAllCaps="true"
        android:text="@android:string/ok"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp" />

</RelativeLayout>